src/app/admin/pages/economy/economy.component.css
.economy {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;

}

.economy>div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}

.title {
    width: 60%;
    margin-bottom: 1rem;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.title h2 {
    font-size: 1.5rem;
    margin-right: 1rem;
}

